<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/infoActivity"
    android:background="@mipmap/adventure_notes_trans"
    tools:context=".main.view.InfoActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/nameItem"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:textSize="36sp"
                            android:layout_margin="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:background="@android:color/white"
                            android:textColor="@android:color/black"
                            android:layout_margin="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />



                        <TextView
                            android:textColor="@android:color/black"
                            android:textSize="24sp"
                            android:layout_margin="16dp"
                            android:text="@string/categoria_de_la_aventura"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/infoCategory"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:textColor="@android:color/black"
                            android:textSize="24sp"
                            android:layout_margin="16dp"
                            android:gravity="center"
                            android:text="@string/descripcion_de_la_aventura"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/infoDescription"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textColor="@android:color/black"
                            android:textSize="24sp"
                            android:layout_margin="16dp"
                            android:text="@string/fecha_de_creacion"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/infoDate"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                </LinearLayout>

        </ScrollView>


</LinearLayout>